fix gallery center and start gap

--- a/assets/css/compiled/main.css
+++ b/assets/css/compiled/main.css
@@ -1948,6 +1948,10 @@ select {
   gap:1rem
 }
 
+.gap-8 {
+  gap:2rem
+}
+
 .gap-x-3 {
   -moz-column-gap:0.75rem;
        column-gap:0.75rem
